# bock

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md
compiler/crates/bock-ai/: Cargo.toml
compiler/crates/bock-ai/src/: cache.rs  caching_provider.rs  config.rs  decision.rs  error.rs  governance.rs  lib.rs  manifest.rs  provider.rs  request.rs  rules.rs
compiler/crates/bock-ai/tests/: anthropic_wiremock.rs  openai_compat_wiremock.rs
compiler/crates/bock-air/: Cargo.toml
compiler/crates/bock-air/src/: compose_context.rs  context.rs  lib.rs  lower.rs  node.rs  prelude_vocab.rs  registry.rs  resolve.rs  scope.rs  stubs.rs  validate_context.rs  verify_capabilities.rs  visitor.rs
compiler/crates/bock-ast/: Cargo.toml
compiler/crates/bock-ast/src/: lib.rs  visitor.rs
compiler/crates/bock-build/: Cargo.toml
compiler/crates/bock-build/src/: cache.rs  content_hash.rs  dep_graph.rs  lib.rs  rebuild.rs  repair.rs  toolchain.rs
compiler/crates/bock-build/tests/: repair_integration.rs
compiler/crates/bock-cli/: Cargo.toml  build.rs
compiler/crates/bock-cli/src/: build.rs  cache_cmd.rs  check.rs  decision_io.rs  doc.rs  fmt.rs  inspect.rs  main.rs  new.rs  output.rs  override.rs  pin.rs  pkg.rs  promote.rs  repl.rs  run.rs  stdlib.rs  test.rs
compiler/crates/bock-cli/tests/: build_command.rs  check_command.rs  d9_commands.rs  format_json.rs  inspect_air_command.rs  mcp_server.rs  override_command.rs  run_command.rs  stdlib_compare.rs  stdlib_compare_targets.rs  stdlib_convert.rs  stdlib_convert_targets.rs  stdlib_error.rs  stdlib_error_targets.rs  stdlib_iter.rs  stdlib_prelude.rs  stdlib_primitive_bridge.rs  stdlib_test.rs  stdlib_test_targets.rs  test_command.rs  transpiled_tests.rs
compiler/crates/bock-codegen/: Cargo.toml
compiler/crates/bock-codegen/src/: ai_synthesis.rs  error.rs  gaps.rs  generator.rs  go.rs  js.rs  lib.rs  profile.rs  py.rs  rs.rs  scaffold.rs  ts.rs
compiler/crates/bock-codegen/tests/: ai_synthesis_integration.rs
compiler/crates/bock-core/: Cargo.toml
compiler/crates/bock-core/src/: adaptive.rs  callback_tests.rs  concurrency.rs  effect.rs  error.rs  iterator.rs  lib.rs  math.rs  memory.rs  string_builder.rs  test.rs  time.rs  traits.rs
compiler/crates/bock-errors/: Cargo.toml
compiler/crates/bock-errors/src/: catalog.rs  lib.rs
compiler/crates/bock-fmt/: Cargo.toml
compiler/crates/bock-fmt/src/: comments.rs  emit.rs  lib.rs  tests.rs
compiler/crates/bock-interp/: Cargo.toml
compiler/crates/bock-interp/src/: builtins.rs  env.rs  error.rs  interp.rs  lib.rs  pattern.rs  value.rs
compiler/crates/bock-lexer/: Cargo.toml
compiler/crates/bock-lexer/src/: lexer.rs  lib.rs  token.rs  vocab.rs
compiler/crates/bock-lsp/: Cargo.toml
compiler/crates/bock-lsp/src/: diagnostics.rs  document_symbol.rs  goto_definition.rs  hover.rs  inlay_hint.rs  lib.rs  pipeline.rs  references.rs  rename.rs  server.rs  symbol_index.rs  type_display.rs
compiler/crates/bock-parser/: Cargo.toml
compiler/crates/bock-parser/src/: lib.rs
compiler/crates/bock-pkg/: Cargo.toml
compiler/crates/bock-pkg/src/: commands.rs  error.rs  install.rs  lib.rs  lockfile.rs  manifest.rs  network.rs  resolver.rs  tree.rs  version.rs
compiler/crates/bock-source/: Cargo.toml
compiler/crates/bock-source/src/: lib.rs
compiler/crates/bock-types/: Cargo.toml
compiler/crates/bock-types/src/: capabilities.rs  checker.rs  effects.rs  exports.rs  lib.rs  ownership.rs  seed_imports.rs  traits.rs  vocab.rs
compiler/crates/bock-types/tests/: methodinfer.rs  xmod_abi.rs
compiler/crates/bock-vocab/: Cargo.toml
compiler/crates/bock-vocab/src/: lib.rs  schema.rs
compiler/tests/: Cargo.toml  execution.rs
compiler/tests/conformance/context/: performance_bare_int_rejected.bock  performance_extended_units.bock  performance_literal_units.bock
compiler/tests/conformance/effects/: handler_over_with_clause_fn.bock  handler_record_impl.bock  innermost_handler_wins.bock  lambda_handler_reserved.bock  module_handler_resolves.bock  multiple_effects.bock  pure_function.bock  unhandled_effect_error.bock
compiler/tests/conformance/exec/: arithmetic.bock  blanket_into_user_from.bock  bounded_comparable_dispatch.bock  bounded_dispatch.bock  class_literal_method_dispatch.bock  clock_handler_intercepts.bock  clock_no_handler_default.bock  concrete_methods_resolve.bock  const_expr_use.bock  cross_module_use.bock  displayable_interpolation_dispatch.bock  enum_no_payload_match.bock  enum_return_boxing.bock  enum_struct_payload_match.bock  enum_tuple_payload_match.bock  enum_variant_use_site.bock  enumvarimport_braced_variants.bock  eq_class_with_impl.bock  eq_enum_variants.bock  eq_generic_bound_record.bock  eq_generic_pair.bock  eq_impl_override.bock  eq_list_custom_element.bock  eq_list_of_records.bock  eq_map_custom_value.bock  eq_map_set_order_independent.bock  eq_nested_custom_element.bock  eq_nested_structural_native.bock  eq_optional_custom_element.bock  eq_optional_wrapper_structural.bock  eq_record_float_nan.bock  eq_record_nested.bock  eq_record_structural.bock  eq_result_custom_element.bock  eq_result_wrapper_structural.bock  eq_tuple.bock  exec_bool_spelling.bock  exec_compare_ordering_more.bock  exec_core_collections.bock  exec_core_collections_utils.bock  (+214 more)
compiler/tests/conformance/interp/: compare_ordering.bock  float_nan_equality.bock  hello_world.bock  list_concat.bock  list_mutators_interleaved.bock  primitive_eq_bridge.bock  question_propagation.bock
compiler/tests/conformance/parse/: add.bock  fmt_cfarm_no_trailing_comma.bock  if_condition_requires_parens.bock  let_binding.bock  tuple_index_diagnostic.bock
compiler/tests/conformance/time/: basic.bock  concurrent.bock  instant.bock  sequential.bock  sleep.bock
compiler/tests/conformance/types-diagnostics/: bare_module_import_rejected.bock  class_method_body_type_error.bock  (+17 more)
compiler/tests/harness/: expectation.rs  mod.rs
tools/pypi-placeholder/: README.md  pyproject.toml
(+436 files in other folders)
