[package]
name = "bock-test-harness"
edition = "2021"
version = "0.1.0"
authors = ["Bock Contributors"]
license = "MIT"
description = "Spec conformance test infrastructure for the Bock compiler"
publish = false

[lib]
path = "harness/mod.rs"

[dev-dependencies]
pretty_assertions = { workspace = true }
