[package]
name = "bock-ai"
edition.workspace = true
version.workspace = true

[dependencies]
bock-air.workspace = true
bock-errors.workspace = true
bock-types.workspace = true
thiserror.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
tempfile = "3"
wiremock = "0.6"
