[package]
name = "bock-ai"
description = "AI provider interface for Bock's AI-native code generation pipeline (Generate, Repair, Optimize, Select)"
documentation = "https://docs.rs/bock-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-air.workspace = true
bock-errors.workspace = true
bock-types.workspace = true
thiserror.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
toml = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
tempfile = "3"
wiremock = "0.6"
