[package]
name = "bock-air"
description = "Annotated Intermediate Representation (AIR) for the Bock compiler — typed, scope-resolved, effect-aware"
documentation = "https://docs.rs/bock-air"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-ast.workspace = true
bock-source.workspace = true
bock-errors.workspace = true
