[package]
name = "bock-ast"
description = "Abstract syntax tree definitions for the Bock language"
documentation = "https://docs.rs/bock-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-source.workspace = true
bock-errors.workspace = true
