[package]
name = "bock-build"
description = "Build pipeline for Bock projects, coordinating parse, check, codegen, and target compilation"
documentation = "https://docs.rs/bock-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-codegen.workspace = true
bock-ai.workspace = true
bock-air.workspace = true
bock-types.workspace = true
bock-parser.workspace = true
bock-ast.workspace = true
bock-source.workspace = true
bock-errors.workspace = true
thiserror.workspace = true
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
