[package]
name = "bock-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "bock"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
bock-errors.workspace = true
bock-source.workspace = true
bock-lexer.workspace = true
bock-parser.workspace = true
bock-ast.workspace = true
bock-air.workspace = true
bock-types.workspace = true
bock-ai.workspace = true
bock-interp.workspace = true
bock-core.workspace = true
bock-fmt.workspace = true
bock-codegen.workspace = true
bock-build.workspace = true
bock-pkg.workspace = true
bock-lsp.workspace = true
rustyline.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
