[package]
name = "bock-codegen"
description = "Multi-target code generation for Bock — JS, TS, Python, Rust, Go"
documentation = "https://docs.rs/bock-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-air.workspace = true
bock-ast.workspace = true
bock-types.workspace = true
bock-source.workspace = true
bock-errors.workspace = true
bock-ai.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
tempfile = "3"
async-trait = "0.1"
