[package]
name = "bock-core"
edition.workspace = true
version.workspace = true

[dependencies]
bock-ai.workspace = true
bock-air.workspace = true
bock-ast.workspace = true
bock-interp.workspace = true
bock-types.workspace = true
regex.workspace = true
thiserror.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
