[package]
name = "bock-core"
description = "Core stdlib registry and runtime primitives for the Bock language"
documentation = "https://docs.rs/bock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-ai.workspace = true
bock-air.workspace = true
bock-ast.workspace = true
bock-interp.workspace = true
bock-types.workspace = true
regex.workspace = true
thiserror.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
sha2 = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
