[package]
name = "bock-errors"
description = "Diagnostic error types and source span machinery for the Bock language compiler"
documentation = "https://docs.rs/bock-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
thiserror.workspace = true
ariadne.workspace = true
