[package]
name = "bock-fmt"
description = "Source code formatter for the Bock language"
documentation = "https://docs.rs/bock-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-ast.workspace = true
bock-lexer.workspace = true
bock-parser.workspace = true
bock-source.workspace = true
bock-errors.workspace = true
