[package]
name = "bock-interp"
description = "Tree-walking interpreter for the Bock language, used by `bock run` and tests"
documentation = "https://docs.rs/bock-interp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-air.workspace = true
bock-ast.workspace = true
bock-types.workspace = true
bock-errors.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-recursion = "1"
futures = "0.3"
