[package]
name = "bock-lsp"
description = "Language Server Protocol implementation for the Bock language"
documentation = "https://docs.rs/bock-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros", "sync"] }
dashmap = "6"
bock-errors.workspace = true
bock-source.workspace = true
bock-lexer.workspace = true
bock-parser.workspace = true
bock-ast.workspace = true
bock-air.workspace = true
bock-types.workspace = true
