[package]
name = "bock-parser"
description = "Parser for the Bock language, producing AST nodes from token streams"
documentation = "https://docs.rs/bock-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-lexer.workspace = true
bock-ast.workspace = true
bock-source.workspace = true
bock-errors.workspace = true
