[package]
name = "bock-pkg"
edition.workspace = true
version.workspace = true

[dependencies]
bock-errors.workspace = true
thiserror.workspace = true
toml = "0.8"
semver = "1"
pubgrub = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tar = "0.4"
flate2 = "1"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3"
mockito = "1"
