[package]
name = "bock-pkg"
description = "Package management for Bock projects, including dependency resolution and lockfiles"
documentation = "https://docs.rs/bock-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-errors.workspace = true
thiserror.workspace = true
toml = "0.8"
semver = "1"
pubgrub = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tar = "0.4"
flate2 = "1"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3"
mockito = "1"
