[package]
name = "bock-source"
description = "Source file management and FileId mapping for the Bock language compiler"
documentation = "https://docs.rs/bock-source"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-errors.workspace = true
