[package]
name = "bock-types"
description = "Type system, type checking, and inference for the Bock language"
documentation = "https://docs.rs/bock-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bock-air.workspace = true
bock-ast.workspace = true
bock-errors.workspace = true
