[package]
name = "bock-vocab"
description = "Self-describing language vocabulary emitter for Bock — keywords, errors, prelude, stdlib, annotations"
documentation = "https://docs.rs/bock-vocab"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "bock-dump-vocab"
path = "src/bin/dump_vocab.rs"

[dependencies]
bock-errors.workspace = true
bock-lexer.workspace = true
bock-air.workspace = true
bock-types.workspace = true
bock-interp.workspace = true
bock-core.workspace = true
bock-codegen.workspace = true
bock-ai.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap.workspace = true
